--- a/package.json
+++ b/package.json
@@ -36,5 +36,16 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "next",
+    "url",
+    "detect",
+    "status",
+    "code",
+    "response",
+    "http",
+    "request",
+    "https"
+  ]
 }
